chore: remove unused repository, clean up annotations, and simplify stream operations
- Delete unused `BookingItemRepository` and its references.
- Remove redundant `@Repository` annotations from repository interfaces.
- Replace `.stream().collect(Collectors.toList())` with `.toList()` for stream simplification.
- Clean up unnecessary imports across services.